--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,3 +22,10 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    #App\EventListener\ProjectChangeSlugListener:
+    #    tags:
+    #        -
+    #            name: doctrine.orm.event_listener
+    #            event: postUpdate
+    #            entity: 'App\Entity\Project'
